--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -10,6 +10,9 @@ body {
 
 }
 
+.shadow() {
+  box-shadow: 0 0 5px 5px black, 0 0 7px 7px rgba(142, 103, 218, 0.7);
+}
 
 .container() {
   margin: 0 auto;
@@ -30,6 +33,11 @@ body {
   align-items: center;
 }
 
+.flex() {
+  display: flex;
+  flex-direction: column;
+}
+
 .card() {
   display: flex;
   max-width: 510px;
@@ -37,6 +45,9 @@ body {
   //align-items: center;
   justify-content: center;
   padding: 30px;
+  &:hover {
+    .shadow();
+  }
   h2 {
     font-size: 20px;
     font-family: "Panton", sans-serif;
@@ -53,9 +64,20 @@ body {
 
 }
 
+//.background() {
+//  background-image: url("../src/images/tekstura.png");
+//  opacity: 0.1;
+//}
+
+.info {
+
+}
+
 .logo {
   display: flex;
   position: relative;
+  cursor: default;
+  width: 105px;
 
   .logo-text {
     position: absolute;
@@ -79,6 +101,7 @@ body {
   }
 }
 
+
 .phone {
   .info-block();
   .text-montserrat();
@@ -95,7 +118,6 @@ body {
 
 .header {
   .container();
-
 
   display: flex;
   justify-content: space-between;
@@ -155,7 +177,6 @@ body {
   }
 
 
-  //background-image: url("src/images/123.png");
 }
 
 .btn {
@@ -165,6 +186,28 @@ body {
   background-color: #6224DFFF;
   border: 0;
   cursor: pointer;
+
+  &:hover {
+    .shadow();
+  }
+}
+
+.circle-btn {
+  border-radius: 50%;
+  width: 15px;
+  height: 15px;
+  border: 1px solid #6224df;
+}
+.content {
+  position: relative;
+}
+
+.background {
+  background: url(../src/images/background.png) no-repeat;
+  position: absolute;
+  background-size: cover;
+  width: 100%;
+  height: 600px;
 }
 
 .info {
@@ -176,6 +219,13 @@ body {
   align-items: center;
   justify-content: space-between;
   margin-bottom: 90px;
+  .hooker-1 {
+    display: flex;
+  }
+
+  .hooker-2 {
+    display: none;
+  }
 
   .info-description {
     display: flex;
@@ -202,6 +252,7 @@ body {
     position: relative;
 
     .discount {
+      .shadow();
       display: flex;
       justify-content: center;
       align-items: center;
@@ -214,11 +265,11 @@ body {
       height: 120px;
       border: 1px dashed #ffffff;
       text-align: center;
-      box-shadow: 0px 0px 5px 5px black, 0px 0px 7px 7px rgba(142, 103, 218, 0.7);
       top: 175px;
       left: -15px;
       background: #00000070;
     }
+
   }
 }
 
@@ -242,12 +293,20 @@ body {
       .card();
       gap: 40px;
       flex-direction: column;
-
+      .card-3_1 {
+        display: block;
+      }
+      .card-3_2 {
+        display: none;
+      }
     }
 
     .card-3 {
       .card();
       justify-content: space-between;
+      gap: 20px;
+
+
 
       p {
         width: 225px;
@@ -258,6 +317,10 @@ body {
       .card();
       border: none;
       flex-direction: column;
+
+      &:hover {
+        box-shadow: none;
+      }
     }
   }
 }
@@ -291,7 +354,8 @@ body {
     justify-content: center;
 
     .slide {
-      max-width: 350px;
+      width: 350px;
+      //margin-right: 30px;
 
       img {
         width: 350px;
@@ -306,6 +370,8 @@ body {
         gap: 18px;
         //width: 350px;
         height: 179px;
+        width: 350px;
+
 
         h2 {
           font-size: 18px;
@@ -331,6 +397,10 @@ body {
       }
     }
   }
+}
+
+.hidden {
+  display: none;
 }
 
 .slider-buttons {
@@ -398,13 +468,19 @@ body {
 
     .menu-card {
 
-      gap: 20px;
       .card();
+      gap: 20px;
+
       display: flex;
       justify-content: space-between;
 
       &:last-child {
         border: none;
+        box-shadow: none;
+
+        .additives {
+          margin-bottom: 60px;
+        }
 
         p {
           margin-bottom: 0;
@@ -472,15 +548,17 @@ body {
     display: flex;
     gap: 30px;
 
+
     .stocks-card {
       display: flex;
       flex-direction: column;
       gap: 20px;
+      max-width: 363px;
 
-      img {
-        height: 222px;
-        width: 445px;
-      }
+      //img {
+      //  height: 222px;
+      //  width: 445px;
+      //}
 
       .stocks-card-description {
         font-size: 15px;
@@ -509,6 +587,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     gap: 60px;
+
   }
 }
 
@@ -548,7 +627,7 @@ body {
         padding: 16px;
         border: 1px solid #6224df;
         background: transparent;
-        width: 320px;
+        width: 350px;
         outline: none;
 
         &::placeholder {
@@ -560,7 +639,7 @@ body {
 
       .booking-btn {
         padding: 17px;
-        width: 320px;
+        width: 350px;
       }
 
       .booking-info {
@@ -680,9 +759,11 @@ body {
 
 
 @import "fonts";
-@import "slider";
-@import "loader";
 @import "adaptive";
+@import "slick";
+@import "slick-theme";
+@import "loader";
+
 
 @import "node_modules/animate.css/animate.min.css";
 @import "node_modules/magnific-popup/dist/magnific-popup.css";
