Edit padding in info block

--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -6,7 +6,7 @@
 
 body {
   background-color: #070015;
-  padding: 33px 15px 50px;
+  //padding: 33px 15px 50px;
 
 }
 
@@ -16,7 +16,8 @@ body {
 
 .container() {
   margin: 0 auto;
-  max-width: 1140px;
+  max-width: 1110px;
+  padding: 0 15px;
 }
 
 .text-montserrat() {
@@ -120,6 +121,7 @@ body {
   justify-content: space-between;
   align-items: center;
   margin-bottom: 35px;
+  padding-top: 33px;
 
   .burger {
     display: none;
@@ -207,7 +209,7 @@ body {
   position: absolute;
   background-size: cover;
   width: 100%;
-  height: 600px;
+  height: 700px;
 }
 
 .info {
@@ -218,7 +220,7 @@ body {
   //flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
-  margin-bottom: 90px;
+  margin-bottom: 190px;
 
   .hooker-1 {
     display: flex;
@@ -299,9 +301,11 @@ body {
     }
 
     .card-2 {
-      .card();
       gap: 40px;
       flex-direction: column;
+      width: 540px;
+      .card();
+
 
       .card-3_1 {
         display: block;
