--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -62,11 +62,6 @@ body {
 
 }
 
-//.background() {
-//  background-image: url("../src/images/tekstura.png");
-//  opacity: 0.1;
-//}
-
 
 .logo {
   display: flex;
@@ -634,7 +629,7 @@ body {
         font-size: 13px;
         font-family: "Montserrat", sans-serif;
         color: #ffffff;
-        padding: 16px;
+        padding: 11px 16px;
         border: 1px solid #6224df;
         background: transparent;
         width: 350px;
