--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -238,15 +238,15 @@ body {
     }
 
     .info-btn {
-      padding: 17px;
       width: 240px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+
 
       a {
         text-decoration: none;
-        color: #ffffff;
+        color: #ffffff;      padding: 17px;display: flex;
+        justify-content: center;
+        align-items: center;
+
       }
     }
   }
@@ -677,7 +677,7 @@ body {
 .location {
   .container();
 
-  margin-bottom: 110px;
+  margin-bottom: 160px;
 
   .location-title {
     font-size: 30px;
@@ -739,10 +739,12 @@ body {
 
 .footer {
   .container();
+  margin-bottom: 55px;
 
   .footer-content {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
     .footer-right_group {
       display: flex;
@@ -750,13 +752,15 @@ body {
 
       .footer-btn {
         width: 240px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
+
 
         a {
           text-decoration: none;
           color: #FFFFFF;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 15px;
         }
       }
     }
