Edit error placeholders in input

--- a/src/css/adaptive.less
+++ b/src/css/adaptive.less
@@ -333,8 +333,13 @@
 }
 
 @media screen and (max-width: 424px) {
+
   .header {
     padding-top: 20px;
+  }
+
+  .info {
+    margin-bottom: 90px;
   }
 
   .advantages {
@@ -435,6 +440,12 @@
   }
 
   .menu {
+    .menu-title {
+      font-size: 20px;
+    }
+    .menu-description {
+      gap: 20px;
+    }
     .menu-links {
       ul {
         //overflow: scroll;
@@ -446,6 +457,9 @@
   }
 
   .stocks {
+    h2 {
+      font-size: 20px;
+    }
     span {
       width: 290px;
     }
@@ -458,12 +472,18 @@
   }
 
   .interior {
+    h2 {
+      font-size: 20px;
+    }
     .interior-photos {
       max-width: 290px;
     }
   }
 
   .booking {
+    h2 {
+      font-size: 20px;
+    }
     .booking-block {
       padding: 30px 0;
 
@@ -483,17 +503,11 @@
     }
   }
 
-  //.location {
-  //  .location-content {
-  //    .location-info {
-  //      order: 1;
-  //    }
-  //
-  //    &:first-child {
-  //      order: 2;
-  //    }
-  //  }
-  //}
+.location {
+  .location-title {
+    font-size: 20px;
+  }
+}
 }
 
 
