--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -291,12 +291,16 @@ body {
 
   .cards {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto;
-    gap: 60px;
+    grid-template-columns: repeat(2, minmax(400px, 1fr));
+    grid-template-rows: repeat(54, 10px);
+    column-gap: 60px;
 
     .card-1 {
       .card();
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row-start: 1;
+      grid-row-end: 26;
       gap: 37px;
 
       h2 {
@@ -305,6 +309,10 @@ body {
     }
 
     .card-2 {
+      grid-column-start: 2;
+      grid-column-end: 3;
+      grid-row-start: 1;
+      grid-row-end: 40;
       gap: 47px;
       flex-direction: column;
       max-width: 540px;
@@ -326,6 +334,10 @@ body {
 
     .card-3 {
       .card();
+      grid-column-start: 1;
+      grid-column-end: 2;
+      grid-row-start: 32;
+      grid-row-end: 54;
       //max-width: 510px;
       justify-content: space-between;
       gap: 40px;
@@ -341,10 +353,14 @@ body {
 
     .card-4 {
       .card();
+      grid-column-start: 2;
+      grid-column-end: 3;
+      grid-row-start: 40;
+      grid-row-end: 52;
       border: none;
       flex-direction: column;
-      padding: 43px 0 0 0;
-      margin-bottom: 10px;
+      padding: 0;
+      //margin-bottom: 10px;
       height: unset;
       justify-content: flex-end;
 
@@ -385,6 +401,7 @@ body {
     display: flex;
     gap: 30px;
     margin-bottom: 30px;
+    //margin: 0 -15px 30px ;
     justify-content: center;
 
     .slide {
@@ -495,7 +512,7 @@ body {
 
   .menu-cards {
     .container();
-
+    padding: 0;
     display: flex;
     flex-wrap: wrap;
     gap: 60px;
@@ -507,26 +524,33 @@ body {
       max-width: calc(50% - 30px);
       display: flex;
       justify-content: space-between;
+      height: unset;
 
       .menu-description {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
+        //justify-content: space-between;
+        gap: 10px;
       }
+
 
       &:last-child {
         border: none;
         box-shadow: none;
         padding: 30px 0;
 
-        .additives {
-          font-size: 15px;
-          font-family: "Montserrat", sans-serif;
-          color: #ffffff;
-        }
+        .menu-description {
+          //gap: 10px;
+          .additives {
+            font-size: 15px;
+            font-family: "Montserrat", sans-serif;
+            color: #ffffff;
+            margin-bottom: 55px;
 
-        ul {
-          list-style: none;
+            ul {
+              list-style: none;
+            }
+          }
         }
 
       }
@@ -540,13 +564,24 @@ body {
         font-family: "Panton", sans-serif;
         color: rgb(255, 255, 255);
         font-weight: bold;
-        //text-align: end;
       }
 
-      img {
-        width: 150px;
-        height: 190px;
+      .menu-image {
+        img {
+          width: 150px;
+          height: 190px;
+
+          &:first-child {
+            display: inline-block;
+          }
+
+          &:last-child {
+            display: none;
+          }
+        }
       }
+
+
     }
   }
 }
@@ -788,6 +823,7 @@ body {
           justify-content: center;
           align-items: center;
           padding: 15px;
+          width: 240px;
         }
       }
     }
