--- a/src/css/styles.less
+++ b/src/css/styles.less
@@ -17,7 +17,7 @@ body {
 
 .container() {
   margin: 0 auto;
-  max-width: 1110px;
+  max-width: 1140px;
   padding: 0 15px;
 }
 
@@ -136,7 +136,7 @@ body {
 
     .header-navigation_close {
       display: none;
-      fill: red;
+      fill: #6224df;
       width: 24px;
       height: 24px;
       position: absolute;
@@ -356,7 +356,7 @@ body {
       grid-column-start: 2;
       grid-column-end: 3;
       grid-row-start: 40;
-      grid-row-end: 52;
+      grid-row-end: 54;
       border: none;
       flex-direction: column;
       padding: 0;
@@ -401,12 +401,12 @@ body {
     display: flex;
     gap: 30px;
     margin-bottom: 30px;
-    //margin: 0 -15px 30px ;
-    justify-content: center;
+    justify-content: flex-start;
+    width: 100%;
+    overflow-x: hidden;
 
     .slide {
       width: 350px;
-      //margin-right: 30px;
 
       img {
         width: 350px;
@@ -545,7 +545,7 @@ body {
             font-size: 15px;
             font-family: "Montserrat", sans-serif;
             color: #ffffff;
-            margin-bottom: 55px;
+            margin-bottom: 39px;
 
             ul {
               list-style: none;
@@ -836,6 +836,7 @@ body {
     margin-top: 35px;
   }
 }
+
 
 
 @import "fonts";
