--- a/src/css/adaptive.less
+++ b/src/css/adaptive.less
@@ -510,8 +510,8 @@
       ul {
         overflow-x: scroll;
         gap: 40px;
-        height: 20px;
-        //width: 400px;
+        height: 40px;
+        align-items: center;
       }
     }
   }
